<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:text="@string/activity_drawable_title"
        android:textSize="20dp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imgDrawable"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/img1" />

    <Button
        android:id="@+id/btnCharacterAnimation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgDrawable"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/activity_drawable_character" />

    <Button
        android:id="@+id/btnDialogCustom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/btnCharacterAnimation"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/activity_drawable_dialog" />
</RelativeLayout>
