<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:text="@string/activity_property_title"
        android:textSize="20dp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imgProperty"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:src="@drawable/ic_android" />

    <TextView
        android:id="@+id/tvTypeProperty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgProperty"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:text="@string/animation_title_blink"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTypeProperty"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/activity_property_description"
        android:textSize="20dp" />

    <RelativeLayout
        android:id="@+id/rlSpinner"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@+id/tvDescription"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorBackground">

        <Spinner
            android:id="@+id/spinnerProperty"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </RelativeLayout>

    <Button
        android:id="@+id/btnPropertyProgram"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/rlSpinner"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/activity_property_programmatically"
        android:textColor="@android:color/black"
        android:textSize="14dp" />
</RelativeLayout>